--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-fabric": "^0.5.2",
     "react-native-sectioned-multi-select": "^0.5.2",
     "react-native-svg": "github:tovesson/react-native-svg",
+    "react-native-swipe-gestures": "^1.0.3",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
